added results to main document

--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.Rmd
@@ -139,6 +139,9 @@ base::load(here("06_Paper","ER-ED","ERED_Stage2","Workspace_ERED.RData"))
 ```{r child = "Method.Rmd"}
 ```
 
+```{r child = "Results.Rmd"}
+```
+
 # References
 
 ```{=tex}
