--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -200,7 +200,7 @@
 
 \authornote{
 
-The authors made the following contributions. Christoph Scheffel: Conceptualization, Methodology, Funding acquisition, Formal analysis, Investigation, Project administration, Software, Visualization, Writing - original draft preparation, Writing - review \& editing; Josephine Zerna: Conceptualization, Methodology, Funding acquisition, Investigation, Project administration, Software, Visualization, Writing - review \& editing; Anne Gärtner: Formal analysis, Writing - review \& editing; Denise Dörfel: Conceptuatlization, Writing - review \& editing; Alexander Strobel: Conceptualization, Writing - review \& editing. \textsuperscript{$\dagger{}$} Christoph Scheffel and Josephine Zerna contributed equally to this work.
+The authors made the following contributions. Christoph Scheffel: Conceptualization, Methodology, Funding acquisition, Formal analysis, Investigation, Project administration, Software, Visualization, Writing - original draft preparation, Writing - review \& editing; Josephine Zerna: Conceptualization, Methodology, Funding acquisition, Investigation, Project administration, Software, Visualization, Writing - review \& editing; Anne Gärtner: Formal analysis, Writing - review \& editing; Denise Dörfel: Conceptuatlization, Writing - review \& editing; Alexander Strobel: Conceptualization, Methodology, Writing - review \& editing. \textsuperscript{$\dagger{}$} Christoph Scheffel and Josephine Zerna contributed equally to this work.
 
 Correspondence concerning this article should be addressed to Christoph Scheffel, Zellescher Weg 17, 01069 Dresden, Germany. E-mail: \href{mailto:christoph_scheffel@tu-dresden.de}{\nolinkurl{christoph\_scheffel@tu-dresden.de}}
 
@@ -559,6 +559,20 @@ The data of this study can be downloaded from \href{https://osf.io/vnj8x/}{osf.i
 \subsection{Code availability}\label{code-availability}}
 
 The paradigm code, as well as the R Markdown file used to analyze the data and write this document is available at our \href{https://github.com/ChScheffel/CAD}{Github repository}.
+
+\hypertarget{results}{%
+\section{3. Results}\label{results}}
+
+\hypertarget{participants-and-descriptive-statistics}{%
+\subsection{3.1 Participants and descriptive statistics}\label{participants-and-descriptive-statistics}}
+
+Data collection took place between 2022-08-16 and 2023-02-03.
+
+\hypertarget{confirmatory-analyses}{%
+\subsection{3.2. Confirmatory analyses}\label{confirmatory-analyses}}
+
+\hypertarget{exploratory-analyses}{%
+\subsection{3.3. Exploratory analyses}\label{exploratory-analyses}}
 
 \hypertarget{references}{%
 \section{References}\label{references}}
@@ -982,7 +996,7 @@ Paired contrasts:
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:unnamed-chunk-3}Paired contrasts for the rmANOVA comparing subjective arousal of negative and neutral pictures in the condition "active viewing".}
+\caption{\label{tab:unnamed-chunk-4}Paired contrasts for the rmANOVA comparing subjective arousal of negative and neutral pictures in the condition "active viewing".}
 
 \begin{tabular}{lllllllll}
 \toprule
@@ -1030,7 +1044,7 @@ Paired contrasts:
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:unnamed-chunk-4}Paired contrasts for the rmANOVA comparing subjective arousal of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
+\caption{\label{tab:unnamed-chunk-5}Paired contrasts for the rmANOVA comparing subjective arousal of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
 
 \begin{tabular}{lllllllll}
 \toprule
@@ -1083,7 +1097,7 @@ Paired contrasts:
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:unnamed-chunk-5}Paired contrasts for the rmANOVA comparing physiological responding (Corrugator activity) of negative and neutral pictures in the condition "active viewing".}
+\caption{\label{tab:unnamed-chunk-6}Paired contrasts for the rmANOVA comparing physiological responding (Corrugator activity) of negative and neutral pictures in the condition "active viewing".}
 
 \begin{tabular}{lllllllll}
 \toprule
@@ -1122,7 +1136,7 @@ Paired contrasts:
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:unnamed-chunk-6}Paired contrasts for the rmANOVA comparing physiological responding (Levator activity) of negative and neutral pictures in the condition "active viewing".}
+\caption{\label{tab:unnamed-chunk-7}Paired contrasts for the rmANOVA comparing physiological responding (Levator activity) of negative and neutral pictures in the condition "active viewing".}
 
 \begin{tabular}{lllllllll}
 \toprule
@@ -1174,7 +1188,7 @@ Paired contrasts:
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:unnamed-chunk-7}Paired contrasts for the rmANOVA comparing physiological responding (Corrugator activity) of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
+\caption{\label{tab:unnamed-chunk-8}Paired contrasts for the rmANOVA comparing physiological responding (Corrugator activity) of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
 
 \begin{tabular}{lllllllll}
 \toprule
@@ -1218,7 +1232,7 @@ Paired contrasts:
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:unnamed-chunk-8}Paired contrasts for the rmANOVA comparing physiological respodning (Levator activity) of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
+\caption{\label{tab:unnamed-chunk-9}Paired contrasts for the rmANOVA comparing physiological respodning (Levator activity) of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
 
 \begin{tabular}{lllllllll}
 \toprule
@@ -1275,14 +1289,14 @@ Paired contrasts:
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:unnamed-chunk-9}Paired contrasts for the rmANOVA comparing subjective effort of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
+\caption{\label{tab:unnamed-chunk-10}Paired contrasts for the rmANOVA comparing subjective effort of conditions "Active viewing - negative", "Distraction", "Distancing", and "Suppression".}
 
 \begin{tabular}{lllllllll}
 \toprule
 Contrast & \multicolumn{1}{c}{Estimate} & \multicolumn{1}{c}{$SE$} & \multicolumn{1}{c}{$df$} & \multicolumn{1}{c}{$t$} & \multicolumn{1}{c}{$p$} & \multicolumn{1}{c}{$BF10$} & \multicolumn{1}{c}{$\eta_{p}^{2}$} & \multicolumn{1}{c}{$95\% CI$}\\
 \midrule
-$View_{negative} - Distancing$ & -110.72 & 20.85 & 45.00 & -5.31 & 0.00 & 59.77 & 0.39 & {}[0.20, 1.00]\\
-$View_{negative} - Distraction$ & -89.72 & 20.85 & 45.00 & -4.30 & 0.00 & 20.49 & 0.29 & {}[0.12, 1.00]\\
+$View_{negative} - Distraction$ & -110.72 & 20.85 & 45.00 & -5.31 & 0.00 & 59.77 & 0.39 & {}[0.20, 1.00]\\
+$View_{negative} - Distancing$ & -89.72 & 20.85 & 45.00 & -4.30 & 0.00 & 20.49 & 0.29 & {}[0.12, 1.00]\\
 $View_{negative} - Suppression$ & -88.15 & 20.85 & 45.00 & -4.23 & 0.00 & 33.13 & 0.28 & {}[0.11, 1.00]\\
 $Distraction - Distancing$ & 21.00 & 20.85 & 45.00 & 1.01 & 1.00 & 0.50 & 0.02 & {}[0.00, 1.00]\\
 $Distraction - Suppression$ & 22.57 & 20.85 & 45.00 & 1.08 & 1.00 & 0.57 & 0.03 & {}[0.00, 1.00]\\
